[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["varvara-krasavina <varvara.krasavina@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.6.0"
isort = {version = "^5.6.4", extras = ["pyproject"]}
black = "^22.3.0"
pylint = "^2.6.0"
pytest = "^7.1.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
skip_glob = [".vscode/*"]